# llm-zoomcamp

./: .gitignore  llm_zoomcampo_2025_homework_02.ipynb  pyproject.toml
agents/: client.py  homework.md  weather.py  weather_server.py
dlt-workshop/: dlt_workshop_homework.ipynb  dlt_workshop_homework.py
homework-01/: answers.txt  main.py
homework-02/: llm_zoomcampo_2025_homework_02.ipynb  llm_zoomcampo_2025_homework_02.py
lesson-01/: elastic_rag.py  main.py  notes.md  rag.py
lesson-01/homework-01/: answers.txt  main.py
lesson-02/: commands.txt  create_collection.py  data_embedding.py  semantic_search.py
lesson-02/homework-02/: llm_zoomcampo_2025_homework_02.ipynb
lesson-02/qdrant_storage/: raft_state.json
lesson-02/qdrant_storage/collections/zoomcamp_rag/0/: newest_clocks.json  replica_state.json
lesson-02/qdrant_storage/collections/zoomcamp_rag/0/segments/457dad4e-9e81-4825-9782-4af978a24611/payload_index/: IDENTITY  LOG  MANIFEST-000005
lesson-02/qdrant_storage/collections/zoomcamp_rag/0/segments/89cca20c-117d-4c2a-9f15-dae30626b53c/payload_index/: IDENTITY  LOG  MANIFEST-000005
lesson-02/qdrant_storage/collections/zoomcamp_rag/0/segments/f11d6c70-77f4-425e-93bc-a546e8f5307d/: mutable_id_tracker.mappings
lesson-03/homework/: cosine.py  data.py  evaluation_results.csv  lesson03-homework.md  minsearch-text-2.py  minsearch_vector.py  minsearch_vector_q-and-a.py  notes.md  qdrant_evaluation.py  quadrant_search.py  rouge_scores.py  test.py
(+6 files in other folders)
